syntax = "proto3";
option csharp_namespace = "PlatformService";

message GetAllRequest {}

service GrpcPlatform {
  rpc GetAll(GetAllRequest) returns (PlatformResponse);
}

message GrpcPlatformModel{
  int32 platformId = 1;
  string name = 2;
  string publisher = 3;
}

message PlatformResponse{
  repeated GrpcPlatformModel platforms = 1;
}